<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/accueil"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_equipe"
        android:icon="@drawable/joueurs"
        android:title="@string/title_team" />

    <item
        android:id="@+id/navigation_joueur"
        android:icon="@drawable/joueur"
        android:title="@string/title_player" />

    <item
        android:id="@+id/navigation_match"
        android:icon="@drawable/vs"
        android:title="@string/title_vs" />

    <item
        android:id="@+id/navigation_tournois"
        android:icon="@drawable/trophee"
        android:title="@string/title_tournois" />

</menu>
